# copilot-test

./: README.md  pyproject.toml
src/mcp_get_weather/: __main__.py  server.py
